--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,12 @@
 name: smartcharge_v2
 description: "A new Flutter project."
 version: 1.0.0+1
+
 environment:
   sdk: ^3.10.8
+
 dependencies:
+  provider: ^6.1.1
   flutter:
     sdk: flutter
   google_fonts: ^6.1.0
@@ -15,14 +18,16 @@ dependencies:
   fl_chart: ^0.66.0
   shared_preferences: ^2.5.4
   cupertino_icons: ^1.0.8
-  firebase_core: ^4.4.0
-  cloud_firestore: ^6.1.2
+  firebase_core: ^3.15.0  # <-- MODIFICATO
+  cloud_firestore: ^5.6.5  # <-- MODIFICATO
+  firebase_auth: ^5.5.2  # <-- MODIFICATO
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
+
 flutter:
   uses-material-design: true
   assets:
     - assets/cars.json
-  
