--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,9 +18,12 @@ dependencies:
   fl_chart: ^0.66.0
   shared_preferences: ^2.5.4
   cupertino_icons: ^1.0.8
-  firebase_core: ^3.15.0  # <-- MODIFICATO
-  cloud_firestore: ^5.6.5  # <-- MODIFICATO
-  firebase_auth: ^5.5.2  # <-- MODIFICATO
+  firebase_core: ^3.15.0
+  cloud_firestore: ^5.6.5
+  firebase_auth: ^5.5.2
+  
+  # 🔥 PACCHETTO PROFESSIONALE PER ONDE LIQUIDE
+  fluid_background: ^1.0.5
 
 dev_dependencies:
   flutter_test:
