SmartCharge v2 - Versione funzionante con autenticazione, auto-download e slider fluidi

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,31 +6,49 @@ environment:
   sdk: ^3.10.8
 
 dependencies:
-  provider: ^6.1.1
   flutter:
     sdk: flutter
+  
+  # UI
   google_fonts: ^6.1.0
-  # Allineamento corretto a 2 spazi
+  cupertino_icons: ^1.0.8
+  
+  # Utility
+  provider: ^6.1.1
+  intl: ^0.19.0
+  shared_preferences: ^2.5.4
+  
+  # Grafici e PDF
+  fl_chart: ^0.66.0
   pdf: ^3.10.8
   printing: ^5.11.1
   path_provider: ^2.1.2
-  intl: ^0.19.0
-  fl_chart: ^0.66.0
-  shared_preferences: ^2.5.4
-  cupertino_icons: ^1.0.8
+  
+  # Firebase
   firebase_core: ^3.15.0
   cloud_firestore: ^5.6.5
   firebase_auth: ^5.5.2
   
-  # 🔥 PACCHETTO PROFESSIONALE PER ONDE LIQUIDE
+  # Effetti
   fluid_background: ^1.0.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
+  flutter_launcher_icons: ^0.13.1  # <-- QUI, NON SOTTO dependencies
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/logo.png"
+  adaptive_icon_background: "#000000"
+  adaptive_icon_foreground: "assets/images/logo_foreground.png"
+  remove_alpha_ios: true
 
 flutter:
   uses-material-design: true
   assets:
     - assets/cars.json
+    - assets/images/logo.png          # Aggiungi anche queste righe
+    - assets/images/logo_foreground.png
