--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,35 +1,17 @@
 {
-    "name": "smartcharge_v2",
-    "short_name": "smartcharge_v2",
+    "name": "SmartCharge",
+    "short_name": "SmartCharge",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "background_color": "#010A0F",
+    "theme_color": "#22D3EE",
+    "description": "Gestione intelligente ricarica veicoli elettrici.",
     "orientation": "portrait-primary",
-    "prefer_related_applications": false,
     "icons": [
-        {
-            "src": "icons/Icon-192.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "icons/Icon-512.png",
-            "sizes": "512x512",
-            "type": "image/png"
-        },
-        {
-            "src": "icons/Icon-maskable-192.png",
-            "sizes": "192x192",
-            "type": "image/png",
-            "purpose": "maskable"
-        },
-        {
-            "src": "icons/Icon-maskable-512.png",
-            "sizes": "512x512",
-            "type": "image/png",
-            "purpose": "maskable"
-        }
+        { "src": "favicon.ico", "type": "image/x-icon", "sizes": "16x16 32x32" },
+        { "src": "icons/icon-192.png", "type": "image/png", "sizes": "192x192" },
+        { "src": "icons/icon-512.png", "type": "image/png", "sizes": "512x512" },
+        { "src": "icons/icon-192-maskable.png", "type": "image/png", "sizes": "192x192", "purpose": "maskable" },
+        { "src": "icons/icon-512-maskable.png", "type": "image/png", "sizes": "512x512", "purpose": "maskable" }
     ]
 }
