--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,18 @@ dependencies:
   
   # Effetti
   fluid_background: ^1.0.5
+  
+  # 🔥 NOTIFICHE - AGGIUNGI QUESTE
+  flutter_local_notifications: ^17.1.0
+  timezone: ^0.9.2
+  permission_handler: ^11.3.0
+  # 🔥 FINE NOTIFICHE
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
-  flutter_launcher_icons: ^0.13.1  # <-- QUI, NON SOTTO dependencies
+  flutter_launcher_icons: ^0.13.1
 
 flutter_launcher_icons:
   android: true
@@ -50,5 +56,6 @@ flutter:
   uses-material-design: true
   assets:
     - assets/cars.json
-    - assets/images/logo.png          # Aggiungi anche queste righe
+    - assets/images/logo.png
     - assets/images/logo_foreground.png
+  
