--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    
   
   # UI
   google_fonts: ^6.1.0
@@ -40,6 +41,7 @@ dependencies:
   permission_handler: ^11.3.0
 
 dev_dependencies:
+  google_sign_in: ^6.1.5
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
